css/style.css
/* ... */
.col-half {
  width: 45%;
  margin: 0 2%;
}

/*-----------------------------------------------------
  Home Page: #work-panel
------------------------------------------------------*/

.years-wrap {
  position: relative;
  width: 100%;
  max-width: 457px;
  list-style: none;
  padding: 0;
  margin: 0 auto;
  overflow: hidden;
}

.years-overlay {
  position: relative;
  z-index: 5;
}

.years-overlay img {
  display: block;
  width: 100%;
  height: auto;
}

.montage img {
  width: 473px;
  height: auto;
  position: absolute;
  top: -8px;
  left: -8px;
}

.js-parallax,
.js-parallax * {
  -webkit-transform: translateZ(0) scale(1.0, 1.0);
}

#work-panel-content {
  font-size: 2rem;
  line-height: 1.5;
}

#work-panel-content p {
  margin-bottom: 40px;
}

/*-----------------------------------------------------
  Home Page: #clients-panel
------------------------------------------------------*/

.logo-grid {
  list-style: none;
  padding: 0;
  margin: 0 auto 30px auto;
  text-align: center;
}

.grid-item {
  display: inline-block;
  width: 24.5%;
}

.grid-item-link {
  display: block;
  width: 75%;
  height: 150px;
  margin: 0 auto;
  background-size: 100% auto !important;
}

.grid-item-link.square-logo {
  background-size: auto 65% !important;
}

/*-----------------------------------------------------
  Home Page: #value-panel
------------------------------------------------------*/

.value-wheel-wrap {
  position: relative;
  max-width: 445px;
  margin: 0 auto;
}

.value-wheel {
  width: 100%;
  max-width: 430px;
  display: block;
  margin: 0 auto;
}

.rotate {
  animation-duration: 30s;
  animation-name: rotateWheel;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

.value-wheel .segment {
  cursor: pointer;
}

.segment:hover .segment-bg use {
  transition: all .3s ease-in-out;
}

.segment:hover .segment-bg use {
  fill: #f27c00 !important;
}

.value-wheel-wrap:hover .rotate {
  animation-play-state: paused;
}

@keyframes rotateWheel {
  0% {
    transform: rotate(0deg);
  }
  20% {
    transform: rotate(72deg);
  }
  40% {
    transform: rotate(144deg);
  }
  60% {
    transform: rotate(216deg);
  }
  80% {
    transform: rotate(288deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.levitate {
  -webkit-animation: levitate 3s infinite;
  -moz-animation: levitate 3s infinite;
  -webkit-transform: rotate(360deg);
  -webkit-transition: -webkit-transform 0.5s ease-in;
}

.wheel-shadow {
  -webkit-animation: wheel-shadow 3s infinite;
  -moz-animation: wheel-shadow 3s infinite;
  -webkit-transform: translateY(-20px);
}

@-webkit-keyframes levitate{
  0% {
    -webkit-transform: translateY(-5px);
   }
  50% {
    -webkit-transform: translateY(0px);
   }
  100%{
    -webkit-transform: translateY(-5px);
  }
}

@-moz-keyframes levitate{
  0% {
    -moz-transform: translateY(-5px);
   }
  50% {
    -moz-transform: translateY(3px);
   }
  100%{
     -moz-transform: translateY(-5px);
  }
}

@-webkit-keyframes wheel-shadow{
  0% {
    -webkit-transform: scale(.9,.95);
    opacity: .8;
   }
  50% {
    -webkit-transform: scale(1,1);
    opacity: 1;
   }
  100%{
    -webkit-transform: scale(.9,.95);
    opacity: .8;
  }
}

@-moz-keyframes wheel-shadow{
  0% {
    -moz-transform: scale(1,1);
   }
  50% {
    -moz-transform: scale(.8,.9);
   }
  100%{
     -moz-transform: scale(1,1);
  }
}

/*-----------------------------------------------------
  Home Page: #culture-panel
------------------------------------------------------*/

#culture-panel h2,
#culture-panel h3 {
  margin: 0 0 15px 0;
}

#culture-col-2 ul {
  margin-bottom: 20px;
  font-size: 2rem;
  line-height: 1.4;
}

.home-team-img {
  width: 100%;
  max-width: 395px;
  margin: 0 auto;
}

.curious-minds-text {
  width: 100%;
  max-width: 222px;
}

#culture-col-3 h4 {
  text-align: left;
}

/*-----------------------------------------------------
  Home Page: #hello-panel
------------------------------------------------------*/

#hello-panel {
  margin-bottom: 0;
  padding-bottom: 0;
}

#hello-panel .panel-inner {
  height: 100%;
}

.contact-block-text {
  padding: 30px 20px;
  position: relative;
  z-index: 10;
}

.contact-block-img {
  height: 205px;
}

.contact-block-text h3 {
  margin: 0;
  line-height: 1.4;
  font-size: 3.5rem;
}

.contact-block-text h4 {
  margin: 0;
  line-height: 1.4;
  font-size: 1.8rem;
}

.js-expand-outer {
  transition: height 500ms ease;
}

.js-expand-inner {
  overflow: hidden;
  opacity: 0;
  transition: opacity 500ms ease;
}

.map-wrap {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 0;
  overflow: hidden;
  transform: translateY(0);
  transition: all 800ms ease;
  z-index: 1;
}

.on .map-wrap {
  height: calc(100% - 232px);
  transform: translateY(-232px);
}

.on .js-expand-inner {
  opacity: 1;
}

.hello-oslo .map-wrap {
  bottom: auto;
  top: 0;
}

.hello-oslo.on .map-wrap {
  transform: translateY(232px);
}

/*-----------------------------------------------------
  Case Studies Landing:
------------------------------------------------------*/

.case-study-item {
  text-align: left;
  margin-bottom: 30px;
}

.item-image {
  display: block;
  max-width: 100%;
  margin-bottom: 20px;
}

.item-image img {
  display: block;
  width: 100%;
  max-width: 430px;
  margin: 0 auto;
}

#csi-cruisy .item-image img {
  max-width: 428px;
}

#csi-tfc .item-image img {
  max-width: 361px;
}

#csi-forward-works .item-image img {
  max-width: 353px;
}

#csi-appraisal-connector .item-image img {
  max-width: 320px;
}

#csi-tmp .item-image img {
  max-width: 435px;
}

#csi-lurr .item-image img {
  max-width: 456px;
}

.item-text-head {
  margin-bottom: 20px;
}

.item-main-heading {
  font-size: 3rem;
  line-height: 1.1;
  color: #000;
  margin: 0;
}

.item-sub-heading {
  font-size: 1.8rem;
  line-height: 1;
  color: #f36d21;
  margin: 0;
}
/* ... */

